# closey-lang

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml  rustup.yaml
lib/: makefile
lib/src/: rc.c  rc.h  syscalls.h  syscalls.s  unknown_arity.c  unknown_arity.h
src/: backends.rs  frontend.rs  lib.rs  main.rs
src/backends/: common.rs  ir.rs  x86_64.rs
src/backends/aarch64/: codegen.rs  m1_jit.c  m1_jit.h
src/backends/x86/: codegen.rs
src/backends/x86_64/: codegen.rs
src/frontend/: correctness.rs  ir.rs  parser.rs  scopes.rs  types.rs
tests/: id.cly
