[package]
name = "closeyc"
version = "0.0.1"
authors = ["jenra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.0"
faerie = "0.16.0"
iced-x86 = "1.12.0"
logos = "0.11.4"
mmap = "0.1"
target-lexicon = "0.11.0"
