[package]
name = "closeyc"
version = "0.0.1"
authors = ["jenra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.46"

[dependencies]
clap = "2.33.0"
codespan-reporting = "0.11.0"
faerie = "0.16.0"
goblin = "0.4.2"
iced-x86 = "1.12.0"
libc = "0.2.97"
logos = "0.11.4"
rustyline = "8.2.0"
target-lexicon = "0.11.0"
